# python-java-data-analysis-benchmark

./: .gitignore  README.md
data_gen/: pyproject.toml
data_gen/src/: airline_gen.py  config.py  flights_gen.py  run_dataset_gen.py
java/: pom.xml
